--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -25,25 +25,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: 'Add .ssh directory'
-        run: |
-          mkdir -p ~/.ssh
-          chmod 0700 ~/.ssh
-      - name: 'Copy public key'
-        run: |
-          echo "${{ vars.SSH_PUBLIC_KEY }}" > ~/.ssh/${{ vars.SSH_PUBLIC_KEY_NAME }}
-          chmod 0400 ~/.ssh/${{ vars.SSH_PUBLIC_KEY_NAME }}
-      - name: Update Stack
-        id: pulumi
-        uses: pulumi/actions@v4.5.0
-        with:
-          command: update
-          stack-name: personal-site-iac
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-          TF_VAR_compartment_ocid: ${{ inputs.TF_VAR_COMPARTMENT_OCID }}
+#      - name: 'Add .ssh directory'
+#        run: |
+#          mkdir -p ~/.ssh
+#          chmod 0700 ~/.ssh
+#      - name: 'Copy public key'
+#        run: |
+#          echo "${{ vars.SSH_PUBLIC_KEY }}" > ~/.ssh/${{ vars.SSH_PUBLIC_KEY_NAME }}
+#          chmod 0400 ~/.ssh/${{ vars.SSH_PUBLIC_KEY_NAME }}
+#      - name: Update Stack
+#        id: pulumi
+#        uses: pulumi/actions@v4.5.0
+#        with:
+#          command: update
+#          stack-name: personal-site-iac
+#        env:
+#          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+#          TF_VAR_compartment_ocid: ${{ inputs.TF_VAR_COMPARTMENT_OCID }}
     outputs:
-      INSTANCE_PUBIP: ${{ steps.pulumi.outputs.instance_pubip }}
+      INSTANCE_PUBIP: 129.146.184.37
+#      INSTANCE_PUBIP: ${{ steps.pulumi.outputs.instance_pubip }}
 
   records:
     name: Create Tunnel and DNS
@@ -96,6 +97,7 @@ jobs:
           fi
       - name: Update Tunnel Rules
         run: |
+          set -x
           ROUTE_CONFIG='{"config": {"ingress": []}}'
           ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:8000" '.config.ingress += [{hostname:$HOSTNAME,service:$SERVICE}]')
           ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "www.${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:8000" '.config.ingress += [{hostname:$HOSTNAME,service:$SERVICE}]')
@@ -111,6 +113,7 @@ jobs:
           CONFIG_OUTCOME=$(echo ${CONFIG_RESP} | jq -r '.success')
           RESP_ERRORS=$(echo ${CONFIG_RESP} | jq -r '.errors')
           RESP_MESSAGES=$(echo ${CONFIG_RESP} | jq -r '.messages')
+          echo ${CONFIG_RESP}
           if [ "$CONFIG_OUTCOME" != 'true' ]; then
             echo "ERROR: while configuring tunnel rules ${RESP_ERRORS}"
             exit 1
